--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 	<meta charset="utf-8">
 	<title>Exterminate!</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link rel="stylesheet" type="text/css" href="css/grid.css">
+	<link rel="stylesheet" type="text/css" href="css/type.css">
 	<link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
 
