--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<meta charset="utf-8">
 	<title>Exterminate!</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link href="http://fonts.googleapis.com/css?family=Nova+Square" rel="stylesheet" type="text/css">
 	<link rel="stylesheet" type="text/css" href="css/grid.css">
 	<link rel="stylesheet" type="text/css" href="css/type.css">
 	<link rel="stylesheet" type="text/css" href="css/main.css">
@@ -11,7 +12,36 @@
 
 <body>
 
-<h1>Exterminate!! </h1>
+<header>
+	<h1>Exterminate!!</h1>
+<header>
+
+<main class="grid">
+
+	<div class="unit unit-xs-1 unit-s-1 unit-m-1-3 unit-l-1-4">
+
+	</div>
+
+	<div class="unit unit-xs-1 unit-s-1 unit-m-2-3 unit-l-3-4">
+
+		<div class="grid">
+
+			<div class="unit">
+				<img src="">
+			</div>
+
+			<div class="unit">
+				<img src="">
+			</div>
+
+		</div>
+
+	</div>
+
+
+
+</main>
+
 
 </body>
 </html>
